<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD6QvVdxo0jWY1Vko5ikdxP6SUYtl-VtQ4</string>

    <string name="app_name">Bus Tracking System</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_menu_title_home">Home</string>
    <string name="nav_menu_title_timetable_information">Timetable Information</string>
    <string name="nav_menu_title_real_time">Real-time</string>
    <string name="nav_menu_title_my_shift">My Shift</string>
    <string name="nav_menu_title_analysis">Analysis</string>
    <string name="nav_menu_title_account">Account</string>
    <string name="nav_menu_title_exit">Exit</string>
    <string name="content_title_home_page">Home Page</string>
    <string name="content_title_real_time">Real-time Bus Location</string>
    <string name="content_title_timetable_information">Timetable Information</string>
    <string name="content_title_my_account">Account</string>
    <string name="content_title_my_shift">My Shift</string>
    <string name="content_title_analysis">Analysis</string>
    <string name="content_sub_title_home_page">Information</string>
    <string name="content_sub_title_real_time">Find out how far the bus is from you</string>
    <string name="content_sub_title_timetable_information">Stops near you</string>
    <string name="content_sub_title_my_shift">Search your bus number to start shift</string>
    <string name="content_sub_title_my_account">Things about you</string>
    <string name="content_sub_title_analysis">Analyse a bus route</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an Error, Please Try Again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network in unavailable</string>
    <string name="title_activity_driver_navigation">DriverNavigationActivity</string>

    <string name="timetable_info_content_title_1">Timetable Information</string>
    <string name="timetable_info_content_body_1">
        \nFind timetable information that is <b>closes to you</b>, click on the bus stop and the departure times will display\n
    </string>
    <string name="real_time_content_title_1">Real-Time Bus Location</string>
    <string name="real_time_content_body_1">\nGet real-time data on how far your bus is.</string>

    <string name="my_shift_content_title_1">My Shift</string>
    <string name="my_shift_content_body_1">
        \n<b>1.</b> On \'My Shift\' tab, please enter the bus number your shift is designated for.\n\n
        <b>2.</b> Then select the route direction you are taking.\n
        <b><i>NOTE:</i></b> If you change route direction, please end your shift and start a new one with the correct direction.\n\n
        <b>3.</b> You will be directed to the map interface, your location will be tracked during your shift for easy use.\n\n
        <b>4.</b> <i>YOUR ROLE:</i> Once you are stationary at a bus stop, please press the marker corresponding to the bus stop you are at. Only need to press once. A notification will prompt a successful act.\n\n
        <b>5.</b> Once finished, or changing route direction, you may \'end-shift\'.\n\n
        <b>6.</b> Drive safely.\n\n
        <b>NOTE:</b> The number value that\'s updated when a marker is click represents the difference between arrival and scheduled time, shown as minutes:seconds.\n
        <b>Negative value</b> = earlier then scheduled.\n
        <b>Positive value</b> = later then scheduled.\n
        <b>Green color</b> = on-time.\n
        <b>Red color</b> = not on-time.\n
    </string>

    <string name="analysis_content_title_1">Analysis</string>
    <string name="analysis_content_body_1">
        \n<b>1.</b> On \'Analysis\' tab, click on the bus that you wish to analysis.\n\n
        <b>2.</b> Both Line and Pie Graphs will appear representing collated data.\n
        <i>NOTE:</i> Clicking on a data point will activate an \'EXAMINE\' button, to further analyse the data point.\n
    </string>

    <string name="title_activity_driver_maps">DriverMap</string>
    <string name="title_activity_admin_navigation">AdminNavigationActivity</string>
    <string name="line_chart_description_label">Linear Chart Representing Analytical Bus Data</string>
    <string name="pie_chart_description_label">Pie Chart Representing On-Time Bus Data (%)</string>
    <string name="alert_data_point_sure_text">Are you sure you want to delete this data point?</string>
    <string name="alert_data_point_sub_sure_text">Deleting the datapoint will remove it entirely, cannot be undone.</string>


</resources>
