<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.UserNavigationActivity"
    tools:showIn="@layout/app_bar_user_navigation">

    <TextView
        android:id="@+id/contentTitle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/colorAccentDark"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="Home Page"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subContentTitle"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/colorAccentLight"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="Information"
        android:textAllCaps="false"
        android:textColor="@color/colorAccentDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTitle" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/userHomeBody"
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintTop_toBottomOf="@id/subContentTitle"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/infoPromptImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info_prompt" />

        <LinearLayout
            android:id="@+id/homePageContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoPromptImage">

            <TextView
                android:id="@+id/homPageContentTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timetable_info_content_title_1"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/homePageContentBody1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timetable_info_content_body_1" />

            <TextView
                android:id="@+id/homPageContentTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/real_time_content_title_1"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/homePageContentBody2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/real_time_content_body_1" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/userTimetableInfoBody"
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintTop_toBottomOf="@id/subContentTitle"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/outOfProximityPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/out_of_proximity_prompt" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stopsDistanceRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>